<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plates</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="section">Section</string>
    <string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="server_url">Server URL</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="save">Save</string>
	<string name="update_interval">Update interval: </string>
	<string name="scan">Scan</string>
	<string name="send">Send</string>
	<string name="item_name">Item Name</string>
	<string name="mass">Mass</string>
	<string name="barcode">Barcode</string>

</resources>
