<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_serverurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_url" />

    <EditText
        android:id="@+id/editText_serverurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_update_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_interval" />
        
        <TextView
            android:id="@+id/textView_update_interval_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar_update_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="11" />

    <Button
        android:id="@+id/btn_save_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>